--- a/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
+++ b/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     @if (Request.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Etiquetas", "Index", "Etiquetas")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     }                                      
                 </ul>
@@ -43,11 +43,18 @@
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        <div id="bodyContainer">
+            @RenderBody()
+        </div>
+
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        
+        <div id="footerContainer">
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Omar Guerrero, Juan Lozano, Marco Sanchez</p>
+            </footer>     
+        </div>
+   
     </div>
 
     @Scripts.Render("~/bundles/jquery")
