--- a/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
+++ b/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     @if (Request.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Etiquetas", "Index", "Etiquetas")</li>
+                        <li>@Html.ActionLink("Tipo de Evento", "Index", "Etiquetas")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     }                                      
                 </ul>
