--- a/EventosCancun/EventosCancun/Views/Etiquetas/Index.cshtml
+++ b/EventosCancun/EventosCancun/Views/Etiquetas/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Tipo de Eventos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo evento", "Create")
 </p>
 <table class="table">
     <tr>
