--- a/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
+++ b/EventosCancun/EventosCancun/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Tipo de Evento", "Index", "Etiquetas")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Eventos", "Index", "Eventos")</li>
                     }                                      
                 </ul>
                 @Html.Partial("_LoginPartial")
