--- a/EventosCancun/EventosCancun/Views/Shared/_LoginPartial.cshtml
+++ b/EventosCancun/EventosCancun/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hola " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <a>Hola @User.Identity.GetUserName()!</a>
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Salir</a></li>
     </ul>
